force-app/main/default/objects/Provider__c/fields/ADS_Id__c.field-meta.xml
<CustomField>
    <fullName>ADS_Id__c</fullName>
    <label>ADS Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>