force-app/main/default/objects/Provider__c/fields/ADS_Name__c.field-meta.xml
<CustomField>
    <fullName>ADS_Name__c</fullName>
    <label>ADS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>