force-app/main/default/objects/Provider__c/fields/Gehrimed_Name__c.field-meta.xml
<CustomField>
    <fullName>Gehrimed_Name__c</fullName>
    <label>Gehrimed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>