force-app/main/default/objects/Provider__c/fields/License_Title__c.field-meta.xml
<CustomField>
    <fullName>License_Title__c</fullName>
    <description>e.g. NP, MD, DO. Drives the collaborating-physician requirement.</description>
    <label>License Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>