force-app/main/default/objects/Provider__c/fields/Program_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Program_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when Programs contains a conflicting combination (e.g. BHI and CoCM). Warning only - the block is applied at booking time, not on this record.</description>
    <inlineHelpText>This provider has a conflicting program combination. Bookings for those programs are blocked.</inlineHelpText>
    <label>Program Conflict</label>
    <type>Checkbox</type>
</CustomField>