force-app/main/default/objects/Provider__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <description>Which programs this provider may be scheduled for. Scheduling filters the provider picker on this.</description>
    <inlineHelpText>Select every program this provider is approved to deliver.</inlineHelpText>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>CoCM</fullName>
            </value>
            <value>
                <fullName>RPM</fullName>
            </value>
            <value>
                <fullName>APCM</fullName>
            </value>
            <value>
                <fullName>Telepsych</fullName>
            </value>
            <value>
                <fullName>After Hours Telehealth</fullName>
            </value>
            <value>
                <fullName>Community Full-Time</fullName>
            </value>
            <value>
                <fullName>IPV Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>