force-app/main/default/objects/Provider__c/fields/Thoroughcare_Name__c.field-meta.xml
<CustomField>
    <fullName>Thoroughcare_Name__c</fullName>
    <label>Thoroughcare Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>