force-app/main/default/objects/Provider__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ADS_Id__c</columns>
    <columns>Thoroughcare_Name__c</columns>
    <columns>ADS_Name__c</columns>
    <columns>Gehrimed_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Name__c</field>
        <operation>equals</operation>
        <value>Oliver</value>
    </filters>
    <label>All</label>
</ListView>